src/test/deca/context/invalid/testSuperclassIsNotAClass.deca
// Description : La super classe donnée n'est pas une classe
class B extends int {

}
